apps/helpdesk/src/pages/aiAgent/components/GuidanceEditor/GuidanceEditor.less
@import (reference) '~css/typography.less';

:local {
    .container {
        position: relative;
    }

    .variables {
        position: absolute;
        right: 16px;
        bottom: 6px;
        z-index: 1;
    }

    .label {
        margin-bottom: var(--spacing-xxs);
    }

    .helperText {
        margin: 0;
        color: var(--content-neutral-tertiary);
    }

    .editor {
        min-height: 150px;
        border: 1px solid var(--neutral-grey-3); // legacy
        border-radius: 4px;
        padding: 6px 8px;

        &.hasError {
            border-color: var(--feedback-error); // legacy
        }

        :global {
            .DraftEditor-root {
                min-height: 136px;
            }

            .DraftEditor-editorContainer {
                border: none;
            }
        }
    }

    .error {
        .caption-regular();
        color: var(--feedback-error); // legacy
        margin-top: var(--layout-spacing-xxs);
    }
}

.axiom :local {
    .editor {
        border: 1px solid var(--border-neutral-default);

        &.hasError {
            border-color: var(--border-error-primary);
        }
    }

    .error {
        color: var(--content-error-primary);
    }
}

.axiom :local {
    :global(.rich-textarea-wrapper):global(:not(.display-only)) {
        border: none !important;
        box-shadow: inset 0 0 0 1px var(--border-neutral-default) !important;
        border-radius: var(--spacing-xs) !important;
        transition: all 0.2s linear !important;

        &:hover {
            background: var(--hover-input);
        }

        &:focus-within {
            background: transparent;
            box-shadow:
                var(--effects-inner-shadow),
                inset 0 0 0 1px var(--border-neutral-secondary) !important;
        }
    }

    .editorError :global(.rich-textarea-wrapper):global(:not(.display-only)) {
        box-shadow: inset 0 0 0 1px var(--border-error-primary) !important;

        &:hover {
            box-shadow: inset 0 0 0 1px var(--border-error-primary) !important;
        }

        &:focus-within {
            box-shadow: inset 0 0 0 1px var(--border-error-primary) !important;
        }
    }
}

